base/UserService/service-postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  selector:
    app: userservice-postgresql
  ports:
    - protocol: TCP
      port: 5431
      targetPort: 5431
