base/UserService/service-userservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
