base/UserService/route-keycloak.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: userservice-keycloak
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
