base/UserService/route-minio-console.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: userservice-minio-console
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
