base/UserService/route-minio.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: api
  tls:
    termination: edge
