base/UserService/route-userservice.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: userservice
spec:
  to:
    kind: Service
    name: userservice
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
